# QJsonChannel

./: .gitignore  .gitmodules  CMakeLists.txt  QJsonChannelConfig.cmake.in  README.md  cmake_install.cmake  cmake_uninstall.cmake
QJsonChannel/: CMakeLists.txt  Doxyfile  QJsonChannelMessage.h  QJsonChannelService.cpp  QJsonChannelService.h  QJsonChannelServiceProvider.cpp  QJsonChannelServiceProvider.h  README.md  api.md  qjsonrpcglobal.h  qjsonrpcmessage.h  qjsonrpcservice.cpp  qjsonrpcservice.h  qjsonrpcserviceprovider.cpp  qjsonrpcserviceprovider.h
QJsonChannel/docs/html/: QJsonChannelGlobal_8h.html  QJsonChannelGlobal_8h.js  QJsonChannelGlobal_8h__dep__incl.map  QJsonChannelGlobal_8h__dep__incl.md5  QJsonChannelGlobal_8h__incl.map  QJsonChannelGlobal_8h__incl.md5  QJsonChannelGlobal_8h_source.html  QJsonChannelMessage_8cpp.html  QJsonChannelMessage_8cpp.js  QJsonChannelMessage_8cpp__incl.map  QJsonChannelMessage_8cpp__incl.md5  QJsonChannelMessage_8cpp_a17fcb63639f416713700278870a49fd7_cgraph.md5  QJsonChannelMessage_8cpp_source.html  QJsonChannelMessage_8h.html  QJsonChannelMessage_8h.js  QJsonChannelMessage_8h__dep__incl.map  QJsonChannelMessage_8h__dep__incl.md5  QJsonChannelMessage_8h__incl.map  QJsonChannelMessage_8h__incl.md5  QJsonChannelMessage_8h_a2db1c243ddc3669d62f0bee937cd5871_cgraph.map  QJsonChannelMessage_8h_a2db1c243ddc3669d62f0bee937cd5871_cgraph.md5  QJsonChannelMessage_8h_source.html  QJsonChannelServiceRepository_8cpp.html  QJsonChannelServiceRepository_8cpp__incl.map  QJsonChannelServiceRepository_8cpp__incl.md5  QJsonChannelServiceRepository_8cpp_source.html  QJsonChannelServiceRepository_8h.html  QJsonChannelServiceRepository_8h__dep__incl.map  QJsonChannelServiceRepository_8h__dep__incl.md5  QJsonChannelServiceRepository_8h__incl.map  QJsonChannelServiceRepository_8h__incl.md5  QJsonChannelServiceRepository_8h_source.html  QJsonChannelService_8cpp.html  QJsonChannelService_8cpp.js  QJsonChannelService_8cpp__incl.map  QJsonChannelService_8cpp__incl.md5  QJsonChannelService_8cpp_a29deb07df58f02d92b66ac12fcbc8049_cgraph.map  QJsonChannelService_8cpp_a29deb07df58f02d92b66ac12fcbc8049_cgraph.md5  QJsonChannelService_8cpp_a69cb39903152add992b3deddca0fec4f_cgraph.map  QJsonChannelService_8cpp_a69cb39903152add992b3deddca0fec4f_cgraph.md5  (+142 more)
QJsonChannel/docs/html/search/: all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  namespaces_0.js  pages_0.js  related_0.js  (+2 more)
QJsonChannel/src/: QJsonChannelGlobal.h  QJsonChannelMessage.cpp  QJsonChannelMessage.h  QJsonChannelService.cpp  QJsonChannelService.h  QJsonChannelServiceProvider.cpp  QJsonChannelServiceProvider.h  QJsonChannelServiceRepository.cpp  QJsonChannelServiceRepository.h  QJsonChannelService_p.h
QJsonChannelBeast/: CMakeLists.txt  README.md
QJsonChannelBeast/src/: QJsonChannelBeast.cpp  QJsonChannelBeast.h
QJsonChannelEmbed/: CMakeLists.txt  README.md
QJsonChannelEmbed/src/: QJsonChannelEmbed.cpp  QJsonChannelEmbed.h  QJsonChannelEmbedAdapter.cpp  QJsonChannelEmbedAdapter.h
QJsonChannelTufao/: CMakeLists.txt  README.md
QJsonChannelTufao/src/: QJsonChannelTufao.cpp  QJsonChannelTufao.h
QJsonChannelTufaoHttp/: CMakeLists.txt  QJsonChannelTufaoHttp.cpp  QJsonChannelTufaoHttp.h
examples/: CMakeLists.txt  project.vcxproj.user.in
examples/beast-server/: CMakeLists.txt  README.md
examples/beast-server/src/: main.cpp
examples/embed-qjsonchannel/: CMakeLists.txt
examples/embed-qtwebchannel/: CMakeLists.txt
examples/hello-cmake/: CMakeLists.txt
examples/qjsonchannel-hybrid/: CMakeLists.txt
examples/qjsonchannel-hybrid/src/: main.cpp  resources.qrc
examples/qjsonchannel-hybrid/src/resources/: index.html
examples/qtwebchannel-hybrid/: CMakeLists.txt
examples/qtwebchannel-hybrid/src/: main.cpp  resources.qrc
examples/service/: TestService.cpp  TestService.h
examples/test-beast-server/: CMakeLists.txt  README.md
examples/test-beast-server/src/: main.cpp
examples/test-embed-qjsonchannel/: CMakeLists.txt
examples/test-embed-qjsonchannel/src/: QJsonChannelEmbed.h  QJsonChannelEmbedAdapter.h  main.cpp  qt.conf  resources.qrc  testservice.cpp  testservice.h
examples/test-embed-qtwebchannel/: CMakeLists.txt
examples/test-embed-qtwebchannel/src/: main.cpp  resources.qrc
examples/test-embed-qtwebchannel/src/resources/: index.html  qwebchannel.js
examples/test-http-server/: CMakeLists.txt
examples/test-http-server/src/: main.cpp  testservice.h
examples/test-qt-webchannel/: CMakeLists.txt
examples/test-qt-webchannel/src/: main.cpp  resources.qrc  testservice.h
examples/test-tufao-server/: CMakeLists.txt  README.md
examples/test-tufao-server/src/: main.cpp
examples/tufao-server/: CMakeLists.txt  README.md
examples/tufao-server/src/: main.cpp
javascript/: README.md
javascript/examples/http/: index.html
javascript/examples/http-client/: index.html
javascript/examples/react-froms/: README.md  package.json
javascript/examples/react-froms-client/: README.md  package.json
javascript/examples/rpc-http/: index.html
javascript/examples/rpc-http-client/: index.html
javascript/examples/rpc-ws/: index.html
javascript/examples/rpc-ws-client/: index.html
javascript/examples/ws-client/: index.html
javascript/qjsonchannel/: qjsonchannel.js
javascript/qjsonrpc-webchannel/: qjsonrpc-webchannel.js
python/: http_jsonrpc_requests.py  jsonrpc.py  testqjsonrpc_http.py  testqjsonrpc_requests.py  testqjsonrpc_websocket.py
src/: CMakeLists.txt  cmake_install.cmake  qjsonrpcglobal.h  qjsonrpcmessage.cpp  qjsonrpcmessage.h  qjsonrpcservice.h  qjsonrpcservice_p.h  qjsonrpcserviceprovider.h
(+10 files in other folders)
